--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
     "cross-env": "^6.0.3",
     "materialize-css": "^1.0.0",
     "moment": "^2.24.0",
@@ -11,6 +12,7 @@
     "react-moment": "^0.9.2",
     "react-redux": "^7.0.3",
     "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.0.1",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
